--- a/Underground.css
+++ b/Underground.css
@@ -555,9 +555,10 @@ footer {
     
     .spread-large video {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: auto;
+        object-fit: contain;
         object-position: center;
+        max-height: 400px;
     }
     
     .spreads-grid {
@@ -667,8 +668,9 @@ footer {
     
     .spread-large video {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: auto;
+        object-fit: contain;
+        max-height: 300px;
     }
     
     .spread-item {
