--- a/index.css
+++ b/index.css
@@ -594,7 +594,7 @@ footer {
 
   .item-content {
     width: 100%;
-    height: 280px;
+    aspect-ratio: 16 / 9;
     border-radius: 24px;
     overflow: hidden;
     position: relative;
@@ -603,17 +603,13 @@ footer {
   .grid-item img,
   .grid-item video {
     width: 100%;
-    height: 280px;
+    height: 100%;
     object-fit: cover;
   }
 
-  /* Exceção para o item PAEZ */
+  /* Exceção para o item PAEZ - proporção diferente */
   .item-6 .item-content {
-    height: 150px !important;
-  }
-
-  .item-6 img {
-    height: 150px !important;
+    aspect-ratio: 3 / 1;
   }
 
   /* Mobile titles - mostrados em mobile */
@@ -699,21 +695,19 @@ footer {
   }
 
   .item-content {
-    height: 250px !important;
+    aspect-ratio: 16 / 9 !important;
   }
 
   .grid-item img,
   .grid-item video {
-    height: 250px !important;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   /* Exceção para o item PAEZ em mobile pequeno */
   .item-6 .item-content {
-    height: 120px !important;
-  }
-
-  .item-6 img {
-    height: 120px !important;
+    aspect-ratio: 3 / 1 !important;
   }
 
   .desktop-nav a {
