--- a/falp.css
+++ b/falp.css
@@ -226,7 +226,8 @@ main {
 .hero-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: #046497;
 }
 
 /* Project header section */
