--- a/A-Arte-da-Mesa.css
+++ b/A-Arte-da-Mesa.css
@@ -233,14 +233,14 @@ nav a {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+
 }
 
 .hero-image img {
   width: 110%;
   height: 110%;
   display: block;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
